style: Reformat project